practice/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from antlr4.error.ErrorListener import ConsoleErrorListener, ErrorListener

class NewErrorListener(ConsoleErrorListener):
    INSTANCE = None

    def syntaxError(self, recognizer, offendingSymbol, line, column, msg, e):
	    return SyntaxException("Error on line " + str(line) +
                              " col " + str(column) + ": " + offendingSymbol.text)

NewErrorListener.INSTANCE = NewErrorListener()

class SyntaxException(Exception):
    def __init__(self, msg):
        self.message = msg




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'integer'", "'void'", "'array'", "'float'", "'return'", 
                     "'out'", "'boolean'", "'for'", "'string'", "'continue'", 
                     "'do'", "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'::'", "'.'", "','", "';'", "'='", "':'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "INTEGER_LIT", 
                      "FLOAT_LIT", "BOOLEAN_LIT", "STRING_LIT", "ARRAY_LIT", 
                      "AUTO", "BREAK", "INTEGER", "VOID", "ARRAY", "FLOAT", 
                      "RETURN", "OUT", "BOOLEAN", "FOR", "STRING", "CONTINUE", 
                      "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "LESS", "GREATER", 
                      "LTE", "GTE", "NOT", "AND", "OR", "EQUAL_TO", "NOT_EQUAL", 
                      "CONCAT", "PERIOD", "COMMA", "SEMI", "EQUAL", "COLON", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "IDENTIFIER", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_array_type = 2
    RULE_element_type = 3
    RULE_dimesion = 4
    RULE_dimesion_type_int = 5
    RULE_dimesion_type_float = 6
    RULE_variable_decl = 7
    RULE_equal_exp = 8
    RULE_equal_func_call = 9
    RULE_identifier_list = 10
    RULE_expression_list = 11
    RULE_exp_list_type_int = 12
    RULE_exp_list_type_float = 13
    RULE_exp_list_type_string = 14
    RULE_parameter = 15
    RULE_expression = 16
    RULE_expression_1 = 17
    RULE_expression_2 = 18
    RULE_expression_3 = 19
    RULE_expression_4 = 20
    RULE_expression_5 = 21
    RULE_expression_6 = 22
    RULE_expression_7 = 23
    RULE_expression_8 = 24
    RULE_factor = 25
    RULE_function_call = 26
    RULE_exps_list = 27
    RULE_exp_list = 28
    RULE_statement = 29
    RULE_assign_stmt = 30
    RULE_lhs = 31
    RULE_if_stmt = 32
    RULE_for_stmt = 33
    RULE_scala_val = 34
    RULE_init_expr = 35
    RULE_condition_expr = 36
    RULE_update_expr = 37
    RULE_while_stmt = 38
    RULE_do_while_stmt = 39
    RULE_call_stmt = 40
    RULE_block_stmt = 41
    RULE_break_stmt = 42
    RULE_continue_stmt = 43
    RULE_return_stmt = 44
    RULE_function_decl = 45
    RULE_inheritance = 46
    RULE_function_name = 47
    RULE_paramter_list = 48
    RULE_paramter_list_term = 49
    RULE_return_type = 50

    ruleNames =  [ "program", "decls", "array_type", "element_type", "dimesion", 
                   "dimesion_type_int", "dimesion_type_float", "variable_decl", 
                   "equal_exp", "equal_func_call", "identifier_list", "expression_list", 
                   "exp_list_type_int", "exp_list_type_float", "exp_list_type_string", 
                   "parameter", "expression", "expression_1", "expression_2", 
                   "expression_3", "expression_4", "expression_5", "expression_6", 
                   "expression_7", "expression_8", "factor", "function_call", 
                   "exps_list", "exp_list", "statement", "assign_stmt", 
                   "lhs", "if_stmt", "for_stmt", "scala_val", "init_expr", 
                   "condition_expr", "update_expr", "while_stmt", "do_while_stmt", 
                   "call_stmt", "block_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "function_decl", "inheritance", "function_name", 
                   "paramter_list", "paramter_list_term", "return_type" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    INTEGER_LIT=3
    FLOAT_LIT=4
    BOOLEAN_LIT=5
    STRING_LIT=6
    ARRAY_LIT=7
    AUTO=8
    BREAK=9
    INTEGER=10
    VOID=11
    ARRAY=12
    FLOAT=13
    RETURN=14
    OUT=15
    BOOLEAN=16
    FOR=17
    STRING=18
    CONTINUE=19
    DO=20
    FUNCTION=21
    OF=22
    ELSE=23
    IF=24
    WHILE=25
    INHERIT=26
    PLUS=27
    MINUS=28
    MUL=29
    DIV=30
    MOD=31
    LESS=32
    GREATER=33
    LTE=34
    GTE=35
    NOT=36
    AND=37
    OR=38
    EQUAL_TO=39
    NOT_EQUAL=40
    CONCAT=41
    PERIOD=42
    COMMA=43
    SEMI=44
    EQUAL=45
    COLON=46
    LB=47
    RB=48
    LSB=49
    RSB=50
    LCB=51
    RCB=52
    IDENTIFIER=53
    WS=54
    ERROR_CHAR=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.DeclsContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.DeclsContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.decls()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.T__0) | (1 << BKOOLParser.INTEGER_LIT) | (1 << BKOOLParser.FLOAT_LIT) | (1 << BKOOLParser.STRING_LIT) | (1 << BKOOLParser.BREAK) | (1 << BKOOLParser.ARRAY) | (1 << BKOOLParser.RETURN) | (1 << BKOOLParser.CONTINUE) | (1 << BKOOLParser.DO) | (1 << BKOOLParser.IF) | (1 << BKOOLParser.WHILE) | (1 << BKOOLParser.MINUS) | (1 << BKOOLParser.NOT) | (1 << BKOOLParser.LB) | (1 << BKOOLParser.LCB) | (1 << BKOOLParser.IDENTIFIER))) != 0)):
                    break

            self.state = 107
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def variable_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Variable_declContext,0)


        def function_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Function_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(BKOOLParser.StatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(BKOOLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = BKOOLParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.array_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.variable_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.function_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(BKOOLParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(BKOOLParser.LSB, 0)

        def dimesion(self):
            return self.getTypedRuleContext(BKOOLParser.DimesionContext,0)


        def RSB(self):
            return self.getToken(BKOOLParser.RSB, 0)

        def OF(self):
            return self.getToken(BKOOLParser.OF, 0)

        def element_type(self):
            return self.getTypedRuleContext(BKOOLParser.Element_typeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = BKOOLParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(BKOOLParser.ARRAY)
            self.state = 117
            self.match(BKOOLParser.LSB)
            self.state = 118
            self.dimesion()
            self.state = 119
            self.match(BKOOLParser.RSB)
            self.state = 120
            self.match(BKOOLParser.OF)
            self.state = 121
            self.element_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Element_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(BKOOLParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_element_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement_type" ):
                return visitor.visitElement_type(self)
            else:
                return visitor.visitChildren(self)




    def element_type(self):

        localctx = BKOOLParser.Element_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.INTEGER) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimesionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimesion_type_int(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_intContext,0)


        def dimesion_type_float(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_floatContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_dimesion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimesion" ):
                return visitor.visitDimesion(self)
            else:
                return visitor.visitChildren(self)




    def dimesion(self):

        localctx = BKOOLParser.DimesionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dimesion)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTEGER_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.dimesion_type_int()
                pass
            elif token in [BKOOLParser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.dimesion_type_float()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimesion_type_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LIT(self):
            return self.getToken(BKOOLParser.INTEGER_LIT, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def dimesion_type_int(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_intContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_dimesion_type_int

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimesion_type_int" ):
                return visitor.visitDimesion_type_int(self)
            else:
                return visitor.visitChildren(self)




    def dimesion_type_int(self):

        localctx = BKOOLParser.Dimesion_type_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimesion_type_int)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(BKOOLParser.INTEGER_LIT)
                self.state = 130
                self.match(BKOOLParser.COMMA)
                self.state = 131
                self.dimesion_type_int()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(BKOOLParser.INTEGER_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimesion_type_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.FLOAT_LIT)
            else:
                return self.getToken(BKOOLParser.FLOAT_LIT, i)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def dimesion_type_float(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_floatContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_dimesion_type_float

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimesion_type_float" ):
                return visitor.visitDimesion_type_float(self)
            else:
                return visitor.visitChildren(self)




    def dimesion_type_float(self):

        localctx = BKOOLParser.Dimesion_type_floatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimesion_type_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(BKOOLParser.FLOAT_LIT)
            self.state = 136
            self.match(BKOOLParser.COMMA)
            self.state = 137
            self.dimesion_type_float()
            self.state = 138
            self.match(BKOOLParser.FLOAT_LIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(BKOOLParser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def element_type(self):
            return self.getTypedRuleContext(BKOOLParser.Element_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def equal_exp(self):
            return self.getTypedRuleContext(BKOOLParser.Equal_expContext,0)


        def equal_func_call(self):
            return self.getTypedRuleContext(BKOOLParser.Equal_func_callContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = BKOOLParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.identifier_list()
            self.state = 141
            self.match(BKOOLParser.COLON)
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTEGER, BKOOLParser.FLOAT, BKOOLParser.BOOLEAN, BKOOLParser.STRING]:
                self.state = 142
                self.element_type()
                pass
            elif token in [BKOOLParser.ARRAY]:
                self.state = 143
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 146
                self.equal_exp()
                pass

            elif la_ == 2:
                self.state = 147
                self.equal_func_call()
                pass





        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Equal_expContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(BKOOLParser.EQUAL, 0)

        def expression_list(self):
            return self.getTypedRuleContext(BKOOLParser.Expression_listContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_equal_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual_exp" ):
                return visitor.visitEqual_exp(self)
            else:
                return visitor.visitChildren(self)




    def equal_exp(self):

        localctx = BKOOLParser.Equal_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_equal_exp)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.EQUAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(BKOOLParser.EQUAL)
                self.state = 153
                self.expression_list()
                self.state = 154
                self.match(BKOOLParser.SEMI)
                pass
            elif token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(BKOOLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Equal_func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(BKOOLParser.EQUAL, 0)

        def function_call(self):
            return self.getTypedRuleContext(BKOOLParser.Function_callContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_equal_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual_func_call" ):
                return visitor.visitEqual_func_call(self)
            else:
                return visitor.visitChildren(self)




    def equal_func_call(self):

        localctx = BKOOLParser.Equal_func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_equal_func_call)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.EQUAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(BKOOLParser.EQUAL)
                self.state = 160
                self.function_call()
                self.state = 161
                self.match(BKOOLParser.SEMI)
                pass
            elif token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(BKOOLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKOOLParser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(BKOOLParser.Identifier_listContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_identifier_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)



